# ssocks

./: .gitignore  CMakeLists.txt  test.sh
.github/workflows/: build.yml  monthly-maintenance.yml
src/: configd-util.h
