cmake_minimum_required(VERSION 3.10)
project(ssocks)

include_directories(. src)
AUX_SOURCE_DIRECTORY(src/libsocks AUX)
list(APPEND AUX src/configd-util.c src/auth-util.c)

if (WIN32)
  list(APPEND AUX src/win_getopt.c)
  link_libraries(ws2_32)
endif(WIN32)

add_executable(ssocks  src/ssocks.c  ${AUX})
INSTALL(TARGETS ssocks RUNTIME DESTINATION bin)
add_executable(ssocksd src/ssocksd.c ${AUX})
INSTALL(TARGETS ssocksd RUNTIME DESTINATION bin)
add_executable(nsocks  src/nsocks.c  ${AUX})
INSTALL(TARGETS nsocks RUNTIME DESTINATION bin)
add_executable(rcsocks src/rcsocks.c ${AUX})
INSTALL(TARGETS rcsocks RUNTIME DESTINATION bin)
add_executable(rssocks src/rssocks.c ${AUX})
INSTALL(TARGETS rssocks RUNTIME DESTINATION bin)
